# jk_imitation_learning

./: .gitignore  LICENSE  README.md
bash/: launch_all_realsence.sh  startall.sh  startcamera.sh  startcamera_act.sh  startcamera_dp3.sh
config/: config_data_sampler.yaml  config_data_sampler_default.yaml  config_data_sampler_nocamera.yaml  config_dp_eval.yaml  config_jk_robot.yaml  config_robotiq_2f85.yaml  config_visualize_epoch.yaml
scripts/: startcamera.sh  startrobot.sh  visualize_epoch.py
src/act_plus_plus/: package.xml  setup.cfg  setup.py
src/act_plus_plus/act_plus_plus/: constants.py  imitate_episodes.py  madokademo.py  policy.py  train_actuator_network.py  zarrtohdf5.py
src/act_plus_plus/act_plus_plus/detr/models/: detr_vae.py
src/data_sampler/: package.xml  setup.cfg  setup.py
src/data_sampler/data_sampler/: camera_subscriber.py  camera_test.py  data_sampler.py  gripper_demo.py  pyRobotiqGripper.py  robot_client.py  xbox_controller.py
src/diffusion_policy/: package.xml  setup.py
src/diffusion_policy/diffusion_policy/: camera_subscriber.py  diffusion_policy_test.py  dp.py  eval_real_robot.py  robot_client.py  xbox_controller.py
src/diffusion_policy/diffusion_policy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/diffusion_policy/diffusion_policy/config/: train_diffusion_transformer_real_hybrid_workspace.yaml
src/diffusion_policy/diffusion_policy/config/task/: real_pusht_image.yaml
src/diffusion_policy/diffusion_policy/dataset/: real_pusht_image_dataset.py
src/diffusion_policy/diffusion_policy/policy/: diffusion_unet_hybrid_image_policy.py
src/diffusion_policy/diffusion_policy/workspace/: base_workspace.py  train_diffusion_unet_hybrid_workspace.py
src/ros2_robot/jk_robot/: CMakeLists.txt
src/ros2_robot/jk_robot/include/jk_robot_server/: JKRobotClient.h  RobotStateUnifiedInterfaceWrapper.h  robotState.h
src/ros2_robot/jk_robot/src/: JKRobotClient.cpp  RobotStateUnifiedInterfaceWrapper.cpp  TCPClient.cpp  TCPServer.cpp  jk_robot_client_test.cpp  jk_robot_server.cpp  robotState.cpp
src/ros2_robot/jk_robot_msgs/: CMakeLists.txt  package.xml
src/ros2_robot/jk_robot_msgs/srv/: StrFuncCommand.srv
src/ros2_robot/robotiq/: CMakeLists.txt
src/ros2_robot/robotiq/src/: robotiq_2F85_server.cpp
training/: config.pkl
wandb/: latest-run
wandb/offline-run-20250406_203929-1geo7l44/: run-1geo7l44.wandb
wandb/offline-run-20250406_203929-1geo7l44/files/: requirements.txt  wandb-metadata.json
